# mx3bot

./: Makefile  Makefile.in  README  README.md  acconfig.h  aclocal.m4  autoconf.h.in  configure  configure.in  description
cmd/: _connect.tcl  _ctcp.tcl  _ctcp_reply.tcl  _join.tcl  _notice.tcl  _topic.tcl  access.tcl  action.tcl  addban.tcl  addmask.tcl  addme.tcl  adduser.tcl  auth.tcl  away.tcl  back.tcl  banlist.tcl  cmode.tcl  connect.tcl  ctcp.tcl  delban.tcl  delmask.tcl  deluser.tcl  disconnect.tcl  fmsg.tcl  fxsite.tcl  getg.tcl  getu.tcl  help.tcl  inviteme.tcl  join.tcl  mode.tcl  msg.tcl  note.tcl  notes.tcl  notice.tcl  part.tcl  phpnuke.tcl  ping.tcl  quit.tcl  quote.tcl  (+19 more)
doc/: CHANGES  INSTALL  MODES  README  config.example  setup.mysql  tcl-commands.txt
misc/: buildhelp.tcl  db_template.c  help_static.tcl
src/: ban.h  channel.c  channel.h  config.c  config.h  connection.c  connection.h  db.c  db.h  irc.h  log.c  log.h  main.c  misc.c  misc.h  mode.h  mx3bot.h  mysql.c  note.h  script.c  script.h  setup.c  setup.h  sql.h  user.c  user.h  userdb.h  var.h
src/db/sql/: ban.c  mode.c  note.c  schema.h  setup.c  userdb.c  var.c
src/db/text/: ban.c  mode.c  note.c  setup.c  userdb.c  var.c
src/irc/: irc_channel.c  irc_channel.h  irc_client.c  irc_client.h  irc_handler.c  irc_handler.h  irc_main.c  irc_network.c  irc_network.h  irc_parse.c  irc_parse.h  irc_queue.c  irc_queue.h
src/lib/: ban.c  fxsite.c  irc.c  lib.c  lib.h  mode.c  mx3bot.c  note.c  phpnuke.c  user.c  var.c
