dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/channel.c)
AC_CONFIG_AUX_DIR(misc)

dnl Mx3bot Version
MX3BOT(0.8.6)

dnl Create `autoconf.h' in root source directory.
AC_CONFIG_HEADER(autoconf.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Get --with/--enable options.
MX3BOT_OPT_MYSQL
MX3BOT_OPT_PHPNUKE
MX3BOT_OPT_FXSITE
MX3BOT_OPT_TCL_LIB
MX3BOT_OPT_TCL_INCLUDE
MX3BOT_OPT_MYSQL_LIB
MX3BOT_OPT_MYSQL_INCLUDE
MX3BOT_OPT_REGEX

dnl Find Tcl.
MX3BOT_CHECK_TCL

dnl Find MySQL if necessary.
MX3BOT_CHECK_MYSQL

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h regex.h sys/time.h unistd.h)

dnl Check that regcomp/regexec/regfree actually work
MX3BOT_CHECK_REGEX

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Find crypt().
AC_CHECK_FUNC(crypt, [], [
  AC_CHECK_LIB(crypt, crypt, [LIBS="$LIBS -lcrypt"],
    [AC_MSG_ERROR(Could not find crypt().)])])

dnl Find socket()
AC_CHECK_FUNC(socket, [], [
  AC_CHECK_LIB(socket, socket, [LIBS="$LIBS -lsocket"],
    [AC_MSG_ERROR(Could not find socket().)])])

dnl Find gethostbyname()
AC_CHECK_FUNC(gethostbyname, [], [
  AC_CHECK_LIB(nsl, gethostbyname, [LIBS="$LIBS -lnsl"],
    [AC_MSG_ERROR(Could not find gethostbyname().)])])

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(gettimeofday mkdir mkfifo select strtoul)

AC_OUTPUT(Makefile)
